		PdfObject* GetStructTreeRoot();
		PdfObject* GetMetadata();
		PdfObject* GetOutlines();
		PdfObject* GetAcroForm();
	Updated pdfinfo & podofopdfinfo to call the new PdfDocument methods;
	Added PdfDictionary and PdfArray classes;
	Added new PdfPagesTree (inside of PdfDocument.cpp) for handling walking a /Pages tree;
	Added new GetPageCount() method to PdfDocument;
	Modifications to PdfPage to attach it to a PdfDocument & construct from a PdfObject;
	Added new Legal and A3 standard page sizes;
	Changed page coordinates to be PDF unit-based instead of 1/1000mm;
	Changed PdfRect to use PDF units and also use bottom instead of top;
	Added ability to go between PdfRect and PdfArray & also get string version of a PdfRect;
	Added support for PdfPage to return all the standard boxes (Media, Crop, etc);
	Added support for fetching inherited values from pages (eg. boxes, rotation, etc.)
	Added more methods to PdfPage;
		GetRotation();
		GetNumAnnots();
	Use Exceptions now instead of error codes;
	Removed Init from PdfOutputDevice;
	Removed Init from PdfParser;
	Added LZW Filter support;
	
Version 0.2
	Improved Documentation;
	Added SetInformation for additional error information to PdfError;
	Fixed the underline color of text;
	Introduced PdfReference class;
	Fixed PdfStream::GetFilteredCopy;
	Improved handling of DecodeParms for filters;
	Fixed PDF files with more than one DecodeParms dictionary in one
	object;
	Added on demand loading of objects to the PdfParser;
	Ported to windows by Leonard Rosenthol;
	On demand loading of objects is now the default;
	Refactored PdfFilter interface so that filters are cached;
	Fixed multiple connected XRef tables through /Prev keys in the trailer;
	Fixed a number of compiler warnings;
	Replaced char*'s with std::strings in a number of classes;
	Added std::ostream support to PdfOutputDevice;
	Improvements to the ImageExtractor tool;
	Refactored PdfVariant so that it is easier to use;

Version 0.1 (11 June 2006)
	Initial release;
	